Add docker watch for hot reload

--- a/compose.yaml
+++ b/compose.yaml
@@ -1,5 +1,10 @@
 services:
   web:
     build: .
+    develop:
+      watch:
+        - action: sync+restart
+          path: ./src
+          target: /code/src
     ports:
       - "8000:8000"
