--- a/compose.yaml
+++ b/compose.yaml
@@ -6,5 +6,6 @@ services:
         - action: sync+restart
           path: ./src
           target: /code/src
+    env_file: ".env"
     ports:
       - "8000:8000"
