--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 fastapi==0.115.6
 fastapi-cli==0.0.6
+google-generativeai==0.8.3
 openai==1.57.2
+pydantic~=2.10.3
 pylint==3.3.2
 pytest==8.3.4
+protobuf~=5.29.3
