added vite frontend

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,9 +4,9 @@ RUN apt-get update
 
 WORKDIR /code
 
-COPY backend/requirements.txt /code/requirements.txt
+COPY requirements.txt /code/requirements.txt
 RUN pip install -r requirements.txt
 
-COPY backend/src /code
+COPY /src /code
 
 CMD ["fastapi", "run", "main.py"]
