--- a/compose.yaml
+++ b/compose.yaml
@@ -1,7 +1,9 @@
 services:
   backend:
     build:
-      dockerfile: backend/Dockerfile
+      context: backend
+      dockerfile: Dockerfile
+    container_name: backend
     develop:
       watch:
         - action: sync+restart
@@ -10,3 +12,13 @@ services:
     env_file: "backend/.env"
     ports:
       - "8000:8000"
+  frontend:
+    build:
+      context: frontend
+      dockerfile: Dockerfile
+    container_name: frontend
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules
+    ports:
+      - "8080:8080"
