--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -16,3 +16,5 @@ jobs:
           ref: ${{ github.head_ref }}
       - name: Prettify code
         uses: creyD/prettier_action@v4.3
+        with:
+          prettier_options: '--write **/*.{vue,js,ts,tsx,json,css}'
