--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -1,6 +1,9 @@
 name: Prettier
 
-on: [ push ]
+on:
+  push:
+    paths:
+      - frontend/src/**
 
 jobs:
   prettier:
@@ -14,4 +17,4 @@ jobs:
       - name: Prettify code
         uses: creyD/prettier_action@v4.3
         with:
-          prettier_options: 'frontend/src/**.{vue,js,ts,tsx,json,css}'
+          prettier_options: '--check **/*.{vue,js,ts,tsx,json,css}'
