--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -16,5 +16,6 @@ jobs:
       - run: npm install
       - uses: sibiraj-s/action-eslint@v3
         with:
+          working-dir: frontend
           eslint-args: '--ignore-path=.gitignore'
           extensions: 'js,jsx,ts,mts,tsx.vue'
