--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -8,6 +8,9 @@ on:
 jobs:
   eslint:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./frontend
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
@@ -16,6 +19,5 @@ jobs:
       - run: npm install
       - uses: sibiraj-s/action-eslint@v3
         with:
-          working-dir: frontend
           eslint-args: '--ignore-path=.gitignore'
           extensions: 'js,jsx,ts,mts,tsx.vue'
