--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -17,7 +17,5 @@ jobs:
         with:
           node-version: 20
       - run: npm install
-      - uses: sibiraj-s/action-eslint@v3
-        with:
-          eslint-args: '--ignore-path=.gitignore'
-          extensions: 'js,jsx,ts,mts,tsx.vue'
+      - name: Run ESLint
+        run: npm run githublint
