--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --build",
     "lint": "eslint . --fix",
+    "githublint": "eslint src --no-fix",
     "format": "prettier --write src/"
   },
   "dependencies": {
