--- a/compose.yaml
+++ b/compose.yaml
@@ -22,3 +22,13 @@ services:
       - /app/node_modules
     ports:
       - "8080:8080"
+  nginx:
+    build:
+      context: nginx
+      dockerfile: Dockerfile
+    container_name: nginx
+    ports:
+      - "80:80"
+    depends_on:
+      - backend
+      - frontend
