--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -9,6 +9,10 @@ server {
         proxy_pass http://frontend:8080;
     }
 
+    location /api/v1 {
+        proxy_pass http://backend:8000;
+    }
+
     #error_page  404              /404.html;
 
     # redirect server error pages to the static page /50x.html
