--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,16 +1,26 @@
 server {
-    listen       80;
-    listen  [::]:80;
+    listen       443 ssl;
+    listen  [::]:443 ssl;
+    include snippets/self-signed.conf;
+    include snippets/ssl-params.conf;
     server_name  localhost;
 
     #access_log  /var/log/nginx/host.access.log  main;
 
     location / {
         proxy_pass http://frontend:8080;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     location /api/v1 {
         proxy_pass http://backend:8000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     #error_page  404              /404.html;
