--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -8,7 +8,7 @@ server {
     #access_log  /var/log/nginx/host.access.log  main;
 
     location / {
-        proxy_pass http://frontend:8080;
+        proxy_pass http://writing_prompts_frontend:8080;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -16,7 +16,7 @@ server {
     }
 
     location /api/v1 {
-        proxy_pass http://backend:8000;
+        proxy_pass http://writing_prompts_backend:8000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
