--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -3,14 +3,14 @@ name: ESLint
 on:
   push:
     paths:
-      - frontend/src/**
+      - writingprompts/frontend/src/**
 
 jobs:
   eslint:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./frontend
+        working-directory: ./writingprompts/frontend
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
