--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -3,7 +3,7 @@ name: Pylint
 on:
   push:
     paths:
-      - backend/**
+      - writingprompts/backend/**
 
 jobs:
   build:
@@ -20,7 +20,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r backend/requirements.txt
+          pip install -r writingprompts/backend/requirements.txt
       - name: Analysing the code with pylint
         run: |
           pylint $(git ls-files '*.py')
