--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -8,6 +8,14 @@ server {
     #access_log  /var/log/nginx/host.access.log  main;
 
     location / {
+        proxy_pass http://home-app:8081;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    location /writing-prompts {
         proxy_pass http://writing_prompts_frontend:8080;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
