--- a/compose.yaml
+++ b/compose.yaml
@@ -34,7 +34,10 @@ services:
       context: nginx
       dockerfile: Dockerfile
     container_name: nginx
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
     ports:
+      - "80:80"
       - "443:443"
     depends_on:
       - home_app
