--- a/nginx/prod.conf
+++ b/nginx/prod.conf
@@ -1,9 +1,26 @@
 server {
+    listen 80;
+    listen [::]:80;
+    server_name jasonkolenosky.ca www.jasonkolenosky.ca;
+
+    location /.well-known/acme-challenge/ {
+        root /var/www/html;
+    }
+
+    # Optionally redirect all other traffic to HTTPS
+    location / {
+        return 301 https://$host$request_uri;
+    }
+}
+
+server {
     listen  443 ssl;
-    listen  [::]:443 ssl;
-    include snippets/self-signed.conf;
+    listen  143.244.177.160:443 ssl;
     include snippets/ssl-params.conf;
-    server_name localhost;
+    server_name jasonkolenosky.ca www.jasonkolenosky.ca;
+
+    ssl_certificate /etc/letsencrypt/live/jasonkolenosky.ca/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/jasonkolenosky.ca/privkey.pem;
 
     #access_log  /var/log/nginx/host.access.log  main;
 
